fixed font size on small phones

--- a/src/css/components/basket.scss
+++ b/src/css/components/basket.scss
@@ -47,9 +47,9 @@
 
     .basket__caption {
         display: inline-block;
-        width: 5rem;
-        height: 5rem;
-        margin-right: 1rem;
+        width: 4rem;
+        height: 4rem;
+        margin-right: 2rem;
         margin-top: .7rem;
         text-indent: -9999px;
         background-image: url(../img/cart.svg);
@@ -63,18 +63,18 @@
 
     .sign-in {
         display: inline-block;
-        width: 5rem;
-        height: 5rem;
+        width: 4rem;
+        height: 4rem;
         background-image: url(../img/enter.svg);
         background-size: contain;
         text-indent: -9999px;
-        margin-right: 1rem;
+        margin-right: 2rem;
     }
 
     .sign-up {
         display: inline-block;
-        width: 5rem;
-        height: 5rem;
+        width: 4rem;
+        height: 4rem;
         background-image: url(../img/key.svg);
         background-size: contain;
         text-indent: -9999px;
