--- a/src/css/components/menu.scss
+++ b/src/css/components/menu.scss
@@ -1,51 +1,53 @@
 .menu {
-  font-size: 1.2rem;
+    font-size: 1.2rem;
 }
 
 .submenu {
-  margin-left: 1.8em;
-  margin-top: 1em;
-  line-height: 2em;
+    margin-left: 1.8em;
+    margin-top: 1em;
+    line-height: 2em;
 }
 
 .menu__item {
-  margin-right: 1.2em;
-  display: inline-block;
+    margin-right: 1.2em;
+    display: inline-block;
 
-  &:last-of-type {
-    margin-right: 0;
-  }
+    &:last-of-type {
+        margin-right: 0;
+    }
 }
 
 .menu__button {
-  text-indent: -9999px;
-  display: none;
+    text-indent: -9999px;
+    display: none;
 }
 
 .hamburger {
-  position: relative;
-  width: 4.5rem;
-  height: 2.5rem;
-  border-color: #00F;
-  border-top: .8rem solid #00F;
-  border-bottom: .8rem solid #00F;
-  background-color: transparent;
+    display: inline-block;
+    position: relative;
+    width: 4.5rem;
+    height: 2rem;
+    margin-top: .25rem;
+    border-color: #00F;
+    border-top: 0.8rem solid #00F;
+    border-bottom: 0.8rem solid #00F;
+    background-color: transparent;
 
-  &:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    display: block;
-    border-color: inherit;
-    border-top-width: .8rem;
-    border-top-style: solid;
-    top: 50%;
-    transform: translate(0, -50%);
-  }
+    &:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        display: block;
+        border-color: inherit;
+        border-top-width: 0.8rem;
+        border-top-style: solid;
+        top: 50%;
+        transform: translate(0, -50%);
+    }
 
-  &:hover {
-    border-color: #66f;
-  }
+    &:hover {
+        border-color: #66f;
+    }
 }
 
 .menu__checkbox {
@@ -54,13 +56,5 @@
 
 .menu__checkbox:checked ~ .top-panel__menu__list {
     max-height: 9999px;
-    transition: max-height .7s ease 0s;
-}
-
-
-@media screen and (max-width: 640px) {
-  .menu__button {
-    display: block;
-    // float: left;
-  }
+    transition: max-height 0.7s ease 0s;
 }
