--- a/src/css/components/search.scss
+++ b/src/css/components/search.scss
@@ -49,6 +49,7 @@
 }
 
 @media screen and (max-width: 640px) {
+
     .search__button {
       border-radius: 0;
       height: 4rem;
@@ -58,5 +59,11 @@
           width: 3rem;
           height: 3rem;
       }
+    }
+
+    .search__field {
+        display: block;
+        height: 4rem;
+        width: 16rem;
     }
 }
