--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -19,11 +19,11 @@ body {
     }
 }
 
-@media screen and (max-width: 640px) {
-    html {
-        font-size: 7px;
-    }
-}
+// @media screen and (max-width: 640px) {
+//     html {
+//         font-size: 7px;
+//     }
+// }
 
 @import 'settings.scss';
 @import 'helpers.scss';
